fix header link areas and add wrapping css

--- a/static/sass/main.scss
+++ b/static/sass/main.scss
@@ -259,6 +259,7 @@ div.etusivu {
 	}
 	p {
 		@include narrow {margin:0 20px 0 20px;}
+		white-space: pre-wrap;
 	}
 	p.alert, p.info {
 		font-size: 0.75rem;
